# agg-venue-connectors

./: .env.example  .gitignore  AGENTS.md  CODEOWNERS  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml
connectors/example/: README.md  package.json
connectors/example/rust/: Cargo.toml
connectors/example/rust/src/: lib.rs
connectors/example/src/: charting.ts  execution.ts  fixtures.ts  index.test.ts  index.ts  manifest.ts
crates/venue-core/: Cargo.toml
crates/venue-core-testkit/: Cargo.toml
crates/venue-core-testkit/src/: lib.rs
crates/venue-core/src/: lib.rs
docs/: ARCHITECTURE.md  CONNECTOR_AUTHOR_GUIDE.md  HOST_INTEGRATION.md  SECURITY.md  TESTING.md
fixtures/src/: index.ts
scripts/: generate-artifacts.ts  lint-connectors.mjs
turbo/generators/: config.ts
turbo/generators/templates/connector/: README.md.hbs  package.json.hbs  tsconfig.json.hbs
turbo/generators/templates/connector/rust/: Cargo.toml.hbs
turbo/generators/templates/connector/rust/src/: lib.rs.hbs
turbo/generators/templates/connector/src/: charting.ts.hbs  execution.ts.hbs  fixtures.ts.hbs  index.test.ts.hbs  index.ts.hbs  manifest.ts.hbs
