[workspace]
members = [
    "connectors/*/rust",
    "crates/venue-core",
    "crates/venue-core-testkit",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Snag-Solutions/agg-venue-connectors"
rust-version = "1.94"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
venue-core = { path = "crates/venue-core" }
venue-core-testkit = { path = "crates/venue-core-testkit" }
